--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@
             }
         </style>
     </div>
-    <script type="text/javascript" src="dist/assets/main.js"></script>
+    <script type="text/javascript" src="assets/main.js"></script>
 </body>
 
 </html>
